--- a/app/src/main/res/layout/image_option_list_item.xml
+++ b/app/src/main/res/layout/image_option_list_item.xml
@@ -1,57 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="62dp"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="8dp"
     android:layout_marginRight="16dp"
+    android:layout_marginBottom="8dp"
     android:background="@drawable/image_option_background_stroke_drawable">
 
     <ImageView
         android:id="@+id/option_iv"
         android:layout_width="60dp"
         android:layout_height="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:scaleType="fitXY"
         android:layout_margin="1dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:scaleType="fitXY"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:src="@drawable/ic_option" />
 
     <View
         android:id="@+id/result_bar"
         android:layout_width="match_parent"
         android:layout_height="4dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:visibility="gone"
-        tools:visibility="visible"
-        tools:background="@color/default_result_bar_color"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:background="@color/default_result_bar_color"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/result_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/result_bar"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:visibility="gone"
-        tools:visibility="visible"
         android:textColor="@android:color/black"
-        tools:text="31 %" />
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/result_bar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:text="31 %"
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/option_tv"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/result_tv"
+        android:layout_marginTop="2dp"
+        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="2dp"
         android:textColor="@android:color/black"
         android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@id/result_tv"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/option_iv"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="K. Looney" />
 
 
