--- a/app/src/main/res/layout/poll_image_list_item.xml
+++ b/app/src/main/res/layout/poll_image_list_item.xml
@@ -22,10 +22,11 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:layout_marginStart="2dp"
+        android:layout_marginEnd="2dp"
         android:textColor="@android:color/black"
         android:textSize="16sp"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
