--- a/app/src/main/res/layout/custom_quiz_widget.xml
+++ b/app/src/main/res/layout/custom_quiz_widget.xml
@@ -20,6 +20,7 @@
 
 
         <TextView
+            android:id="@+id/txt_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -44,7 +45,6 @@
             android:id="@+id/quiz_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
             android:layout_marginTop="12dp"
             tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             tools:listitem="@layout/image_option_list_item"
