--- a/app/src/main/res/layout/image_option_list_item.xml
+++ b/app/src/main/res/layout/image_option_list_item.xml
@@ -4,8 +4,7 @@
     android:layout_height="62dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="8dp"
-    android:layout_marginRight="16dp"
+    android:layout_margin="8dp"
     android:background="@drawable/image_option_background_stroke_drawable">
 
     <ImageView
